# joinable

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  skill.md
apps/api/: pyproject.toml
apps/api/joinable_api/: __init__.py  auth.py  main.py
apps/api/joinable_api/routers/: admin.py  bookmarks.py  categories.py  events.py  geocode.py
apps/web/: index.html  package-lock.json  package.json
apps/web/src/: App.css  App.tsx  adminApi.ts  api.ts  auth.ts  locationStorage.ts  main.tsx  types.ts
apps/web/src/components/: AdminPage.tsx  EventCard.tsx  EventDetailPage.tsx  LocationPicker.tsx  SearchBar.tsx
apps/worker/: pyproject.toml
apps/worker/joinable_worker/: __init__.py  celery_app.py  tasks.py
db/: seed.py
db/migrations/: env.py  script.py.mako
db/migrations/versions/: 001_initial_schema.py  002_add_render_js.py  003_adapters.py  004_scrape_job_events_new.py
infra/railway/api/: Dockerfile  railway.json
infra/railway/web/: Dockerfile  railway.json
infra/railway/worker/: Dockerfile  railway.json
scripts/: run_scrape.py  verify.sh
