[project]
name = "joinable"
version = "0.1.0"
description = "Global live events aggregation and search platform"
readme = "README.md"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["packages/core", "apps/api", "apps/worker"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "alembic>=1.14",
    "psycopg2-binary>=2.9",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
