[project]
name = "joinable-api"
version = "0.1.0"
description = "Joinable FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "joinable-core",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "slowapi>=0.1.9",
    "python-jose[cryptography]>=3.3",
    "httpx>=0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["joinable_api"]

[tool.uv.sources]
joinable-core = { workspace = true }
