[project]
name = "joinable-worker"
version = "0.1.0"
description = "Joinable Celery scraper worker"
requires-python = ">=3.12"
dependencies = [
    "joinable-core",
    "celery[redis]>=5.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["joinable_worker"]

[tool.uv.sources]
joinable-core = { workspace = true }
